modal box: fix z-index

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -611,6 +611,7 @@ body {
   height: 100vh;
   background: rgba(0, 0, 0, 0.75);
   display: none;
+  z-index: 1;
 
   &__inner {
     @include flexbase;
@@ -749,6 +750,9 @@ body {
   .offer__inner {
     background: none;
   }
+}
+
+@media (max-width: 992px) {
 }
 
 @media (max-width: 900px) {
